<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.exchangerate.ExchangeRateFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/fromCurrencyLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="From"
                    android:textColor="#9e9e9e"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fromEditText"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="4dp"
                    android:textSize="18sp"
                    tools:text="IDR" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/toCurrencyLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="To"
                    android:textColor="#9e9e9e"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/toEditText"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="4dp"
                    android:textSize="18sp"
                    tools:text="JPY" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="Input"
            android:textSize="13sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/priceInputEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:hint="123456"
            android:padding="6dp"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/calculateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="6dp"
            android:text="Calculate"
            android:textAllCaps="false"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="Output"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/priceOutputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_vertical"
            android:padding="6dp"
            android:textSize="24sp" />
    </LinearLayout>
</RelativeLayout>